--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/js-cookie": "^3.0.3",
 		"aws-sdk": "^2.1353.0",
 		"daisyui": "^2.46.1",
+		"js-cookie": "^3.0.1",
 		"pg": "^8.10.0",
 		"svelte-infinite-loading": "^1.3.8",
 		"sveltekit-image": "^0.5.9"
