--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"aws-sdk": "^2.1353.0",
 		"daisyui": "^2.46.1",
 		"js-cookie": "^3.0.1",
+		"openai": "^3.2.1",
 		"pg": "^8.10.0",
 		"svelte-infinite-loading": "^1.3.8",
 		"sveltekit-image": "^0.5.9"
